# SimuladorPLC

./: .readme  iniciar_projeto.bat  iniciar_projeto.ps1
industrial-plc-simulator/: .gitignore  README.md  debug_simulation.py  pyproject.toml  run_simulator.bat  test_client.py
industrial-plc-simulator/app/: main.py
industrial-plc-simulator/app/domain/: enums.py  models.py  validation.py
industrial-plc-simulator/app/export/: tag_map_exporter.py
industrial-plc-simulator/app/modbus/: mapping.py  register_store.py  server.py
industrial-plc-simulator/app/persistence/: json_repository.py
industrial-plc-simulator/app/simulation/: engine.py  rules.py  value_generators.py
industrial-plc-simulator/app/ui/: log_panel.py  main_window.py  node_red_tooltip.py  plant_tree.py  tag_editor.py  tag_table.py
industrial-plc-simulator/examples/: default_plant.json
industrial-plc-simulator/tests/: test_models.py  test_node_red_tooltip.py  test_simulation_engine.py  test_validation.py
nodered/: .config.nodes.json  .config.runtime.json  .config.runtime.json.backup  package.json
nodered/flows/: flows.json
