[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-plc-simulator"
version = "0.1.0"
description = "Visual PLC / Industrial Equipment Simulator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.5.0",
    "pymodbus>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pylint>=2.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]

[tool.pytest.ini_options]
testpaths = ["tests"]
